<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.robillo.srtmediaplayerexample.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/activityOne"
        android:text="@string/launch_activity_one"
        android:background="?attr/selectableItemBackground"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/activityTwo"
        android:text="@string/launch_activity_two"
        android:background="?attr/selectableItemBackground"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/activityThree"
        android:text="@string/launch_activity_three"
        android:background="?attr/selectableItemBackground"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/activityFour"
        android:text="@string/launch_activity_four"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout>
