<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.robillo.srtmediaplayerexample.FourActivity">

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="12sp"
        android:visibility="gone"
        android:id="@+id/player_surface"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3">

        <com.halilibo.bettervideoplayer.BetterVideoPlayer
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/back"
                    android:contentDescription="@string/back"
                    android:padding="10sp"
                    android:layout_margin="10sp"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:background="?attr/selectableItemBackground"/>

                <View
                    android:layout_width="0sp"
                    android:layout_height="12sp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/share"
                    android:contentDescription="@string/back"
                    android:padding="10sp"
                    android:layout_margin="10sp"
                    android:src="@drawable/ic_share_white_24dp"
                    android:background="?attr/selectableItemBackground"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:id="@+id/title"
                android:text="@string/the_monk_who_sold_his_ferrari"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:id="@+id/count"
                android:text="@string/rush_1_10"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:id="@+id/tv_subtitle"
                tools:text="@string/the_monk_who_sold_his_ferrari"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_gravity="bottom"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:id="@+id/tv_current_duration"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:id="@+id/tv_max_duration"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:gravity="end"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--<ImageButton-->
            <!--android:layout_width="0sp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="50sp"-->
            <!--android:id="@+id/prev_10"-->
            <!--android:contentDescription="@string/back"-->
            <!--android:padding="10sp"-->
            <!--android:scaleType="fitCenter"-->
            <!--android:src="@drawable/ic_replay_10_black_24dp"-->
            <!--android:background="?attr/selectableItemBackground"-->
            <!--tools:ignore="NestedWeights" />-->

        <ImageButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="50sp"
            android:id="@+id/prev"
            android:contentDescription="@string/back"
            android:padding="10sp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:background="?attr/selectableItemBackground"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="70sp"
            android:id="@+id/play_pause"
            android:contentDescription="@string/back"
            android:padding="10sp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_circle_filled_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:visibility="invisible"
            android:clickable="false"/>

        <!--<ImageButton-->
            <!--android:layout_width="0sp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="50sp"-->
            <!--android:id="@+id/next_10"-->
            <!--android:contentDescription="@string/back"-->
            <!--android:padding="10sp"-->
            <!--android:scaleType="fitCenter"-->
            <!--android:src="@drawable/ic_forward_10_black_24dp"-->
            <!--android:background="?attr/selectableItemBackground"/>-->

        <ImageButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="50sp"
            android:id="@+id/next"
            android:contentDescription="@string/back"
            android:padding="10sp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:background="?attr/selectableItemBackground"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>